Sync approved consultant regions to consultant module